<resources>
    <string name="app_name">TowerOfFlamingBlames</string>
    <string name="top_players">TOP PLAYERS</string>
    <string name="top_games">TOP GAMES</string>
    <string name="your_games">YOUR GAMES</string>
    <string name="textview">TextView</string>
    <string name="app_name_display">Tower of Flaming Blames</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="start_game">START GAME</string>
    <string name="statistics">Statistics</string>
    <string name="create_your_nickname">Create your nickname</string>
</resources>