<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_flames">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTopPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onClickTopPlayers"
        android:padding="20dp"
        android:text="@string/top_players"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnTopGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTopGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onClickTopGames"
        android:padding="20dp"
        android:text="@string/top_games"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnYourGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTopPlayers" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYourGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="onClickYourGames"
        android:padding="20dp"
        android:text="@string/your_games"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTopGames" />

</androidx.constraintlayout.widget.ConstraintLayout>